welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type void
def move(nbPas:int ,versLavant:Boolean): void =  {
                                         ^Program:2: error: not found: type int
def move(nbPas:int ,versLavant:Boolean): void =  {
               ^